@@ -471,6 +471,19 @@
   #endif
 #endif
 
+/* Choose the appropriate designated field initializer syntax.
+ The standard syntax nowadays is   .field = value
+ but it not supported in GNU g++ < 4.7.
+ The older GNU syntax              field : value
+ is supported at least throughout GNU gcc and g++ 2.95 to 4.8
+ but is marked obsolete and elicits a warning in clang. */
+#if defined(GNU) && !defined(__clang__) && defined(__cplusplus) && (__GNUC__ + (__GNUC_MINOR__ >= 7) <= 4)
+  #define designated_init(field,value) field:value
+#else
+  #define designated_init(field,value) .field=value
+#endif
+%% export_def(designated_init(field,value));
+
 /* A property of the processor:
  The sequence in which words/long-words are being put into bytes */
 #if defined(short_little_endian) || defined(int_little_endian) || defined(long_little_endian)
@@ -2416,9 +2429,9 @@ Long-Float, Ratio and Complex (only if SPVW_MIXED).
 #if defined(WIDE_STRUCT) || defined(OBJECT_STRUCT)
   #define as_oint(expr)  ((expr).one_o)
   #if defined(WIDE_STRUCT)
-    #define as_object(o)  ((object){u={.one_u=(o)}INIT_ALLOCSTAMP})
+    #define as_object(o)  ((object){designated_init(u,{designated_init(one_u,(o))})INIT_ALLOCSTAMP})
   #elif defined(OBJECT_STRUCT)
-    #define as_object(o)  ((object){.one_o=(o)INIT_ALLOCSTAMP})
+    #define as_object(o)  ((object){designated_init(one_o,(o))INIT_ALLOCSTAMP})
   #else
     extern __inline__ object as_object (register oint o)
       { register object obj; obj.one_o = o; return obj; }
@@ -2932,7 +2945,7 @@ typedef signed_int_with_n_bits(intVsize)  sintV;
     uintL allocstamp;
   };
   /* Always initialize allocstamp with the current(!) value of alloccount. */
-  #define INIT_ALLOCSTAMP  , allocstamp: alloccount
+  #define INIT_ALLOCSTAMP  , designated_init(allocstamp,alloccount)
 #else
   typedef gcv_object_t object;
   #define INIT_ALLOCSTAMP
@@ -3998,7 +4011,7 @@ extern bool inside_gc;
    on the STACK) we can assume that GC has updated it. */
   inline gcv_object_t::operator object () const {
     nonimmprobe(one_o);
-    return (object){ .one_o=one_o INIT_ALLOCSTAMP };
+    return (object){ designated_init(one_o,one_o) INIT_ALLOCSTAMP };
   }
 
   /* When an object is put into a GC visible location (in the heap or
@@ -4040,7 +4053,7 @@ extern bool inside_gc;
 %%     emit_define("nonimmsubrp(obj)","false");
 %%   #endif
 %%   export_def(nonimmprobe(obj_o));
-%%   puts("inline gcv_object_t::operator object () const { nonimmprobe(one_o); return (object){ .one_o=one_o, .allocstamp=alloccount }; }");
+%%   puts("inline gcv_object_t::operator object () const { nonimmprobe(one_o); return (object){ designated_init(one_o,one_o), designated_init(allocstamp,alloccount) }; }");
 %%   puts("inline gcv_object_t::gcv_object_t (object obj) { if (!(gcinvariant_object_p(obj) || gcinvariant_symbol_p(obj) || obj.allocstamp == alloccount || nonimmsubrp(obj))) abort(); one_o = as_oint(obj); nonimmprobe(one_o); }");
 %%   puts("inline gcv_object_t::gcv_object_t () {}");
 %% #endif
@@ -5006,7 +5019,7 @@ typedef unsigned_int_with_n_bits(char_int_len)  cint;
     #ifdef __cplusplus
       inline chart as_chart(int c) { return chart(c); }
     #else
-      #define as_chart(c)  ((chart){.one_c=(c)})
+      #define as_chart(c)  ((chart){designated_init(one_c,(c))})
     #endif
   #else
     extern __inline__ chart as_chart (register cint c)
